--- a/bucket_5D/tesseract/freebsd/patch-configure.ac
+++ b/bucket_5D/tesseract/freebsd/patch-configure.ac
@@ -3,9 +3,9 @@ libpthread. Look for a symbol that causes us to load it.
 libtesseract.so is not linked against libomp if openmp is enabled,
 which makes dependent ports fail. This adds a workaround by linking
 directly against libomp.
---- configure.ac.orig	2022-01-07 12:43:52 UTC
+--- configure.ac.orig	2022-07-06 20:15:49 UTC
 +++ configure.ac
-@@ -442,6 +442,9 @@ esac
+@@ -463,6 +463,9 @@ esac
  # ----------------------------------------
  
  AC_SEARCH_LIBS([pthread_create], [pthread])
@@ -13,5 +13,5 @@ directly against libomp.
 +  AC_SEARCH_LIBS([omp_get_thread_num ], [omp])
 +fi
  
- 
- # ----------------------------------------
+ # Set PKG_CONFIG_PATH for MacOS with Homebrew unless it is already set.
+ AC_CHECK_PROG([have_brew], brew, true, false)
