erlang: fix build on netbsd

--- a/bucket_A3/erlang/patches/patch-lib_crypto_c__src_Makefile.in
+++ b/bucket_A3/erlang/patches/patch-lib_crypto_c__src_Makefile.in
@@ -9,3 +9,12 @@
  CRYPTO_LINK_LIB=$(SSL_DED_LD_RUNTIME_LIBRARY_PATH) -L$(SSL_LIBDIR) -l$(SSL_CRYPTO_LIBNAME)
  EXTRA_FLAGS = -DHAVE_DYNAMIC_CRYPTO_LIB
  else
+@@ -232,7 +232,7 @@ $(LIBDIR)/crypto$(TYPEMARKER).dll: $(CRY
+ ifeq ($(DYNAMIC_OR_WIN_CRYPTO_LIB),yes)
+ $(LIBDIR)/crypto_callback$(TYPEMARKER).so: $(CALLBACK_OBJS)
+ 	$(INSTALL_DIR) $(LIBDIR)
+-	$(LD) $(LDFLAGS) -o $@ $^ $(LDLIBS)
++	$(V_CC) $(LDFLAGS) -o $@ $^ $(LDLIBS)
+ 
+ $(LIBDIR)/crypto_callback$(TYPEMARKER).dll: $(CALLBACK_OBJS)
+ 	$(INSTALL_DIR) $(LIBDIR)
