--- a/bucket_4E/NetBox/patches/patch-mkdocs.yml
+++ b/bucket_4E/NetBox/patches/patch-mkdocs.yml
@@ -1,17 +1,17 @@
---- mkdocs.yml.orig	2022-04-28 19:00:11 UTC
+--- mkdocs.yml.orig	2022-12-16 22:16:07 UTC
 +++ mkdocs.yml
-@@ -1,5 +1,5 @@ site_name: NetBox Documentation
+@@ -1,5 +1,5 @@
  site_name: NetBox Documentation
 -site_dir: netbox/project-static/docs
 +site_dir: project-static/docs
  site_url: https://docs.netbox.dev/
  repo_name: netbox-community/netbox
  repo_url: https://github.com/netbox-community/netbox
-@@ -26,7 +26,6 @@ plugins:
+@@ -27,7 +27,6 @@ plugins:
            setup_commands:
              - import os
              - import django
 -            - os.chdir('netbox/')
              - os.environ.setdefault("DJANGO_SETTINGS_MODULE", "netbox.settings")
              - django.setup()
-           rendering:
+           options:
