gnatstudio: still crashes on gtk, but here are some fixes

--- a/bucket_34/gnatstudio/files/gps.in
+++ b/bucket_34/gnatstudio/files/gps.in
@@ -9,7 +9,7 @@ VIAS=$(echo ${PATH} | /usr/bin/tr ":" " ")
 
 if [ -z "${ADA_PROJECT_PATH}" ]
 then
-	ADA_PROJECT_PATH=%%PREFIX%%/lib/gnat
+	ADA_PROJECT_PATH=%%PREFIX%%/share/gpr
 	export ADA_PROJECT_PATH
 fi
 
