--- a/bucket_34/gnatstudio/patches/patch-shared.gpr.in
+++ b/bucket_34/gnatstudio/patches/patch-shared.gpr.in
@@ -1,10 +1,12 @@
 --- shared.gpr.in.orig	2022-05-11 12:25:42 UTC
 +++ shared.gpr.in
-@@ -50,7 +50,7 @@ project Shared is
+@@ -49,8 +49,8 @@ project Shared is
+          when "Debug" =>
              for Switches ("Ada") use Common &
                ("-O0", "-gnata", "-gnatVa", "-gnatQ", "-gnatygO",
-                "-gnatwaCJe", "-gnateE");
+-               "-gnatwaCJe", "-gnateE");
 -            for Switches ("C") use ("-g", "-O1");
++               "-gnatwaCJ", "-gnateE", "-fstack-check");
 +            for Switches ("C") use ("-g", "-O1", "-Wno-implicit-function-declaration");
  
           when "Production" =>
