--- a/bucket_7E/python-cryptography/specification.template
+++ b/bucket_7E/python-cryptography/specification.template
@@ -5,8 +5,8 @@ DEF[PORTVERSION]=	%%VERSION%%
 NAMEBASE=		python-cryptography
 VERSION=		${PORTVERSION}
 KEYWORDS=		python rust
-VARIANTS=		py310 py311
-SDESC[py311]=		Cryptographic recipes and primitives (3.11)
+VARIANTS=		py310 v11
+SDESC[v11]=		Cryptographic recipes and primitives (3.11)
 SDESC[py310]=		Cryptographic recipes and primitives (3.10)
 HOMEPAGE=		https://github.com/pyca/cryptography
 CONTACT=		Python_Automaton[python@ironwolf.systems]
@@ -19,13 +19,13 @@ DISTFILE[1]=		cryptography-${PORTVERSION}.tar.gz:main
 %%CR_DISTFILES%%
 %%DF_INDEX%%
 
-SPKGS[py311]=		single
+SPKGS[v11]=		single
 SPKGS[py310]=		single
 
 OPTIONS_AVAILABLE=	PY311 PY310
 OPTIONS_STANDARD=	none
 VOPTS[py310]=		PY310=ON PY311=OFF
-VOPTS[py311]=		PY310=OFF PY311=ON
+VOPTS[v11]=		PY310=OFF PY311=ON
 
 # License listed at PyPI
 # BSD or Apache License, Version 2.0
@@ -40,9 +40,9 @@ DISTNAME=		cryptography-${PORTVERSION}
 [PY310].USES_ON=			python:py310,sutools
 [PY310].BUILDRUN_DEPENDS_ON=		python-cffi:single:py310
 					python-setuptools-rust:single:py310
-[PY311].USES_ON=			python:py311,sutools
-[PY311].BUILDRUN_DEPENDS_ON=		python-cffi:single:py311
-					python-setuptools-rust:single:py311
+[PY311].USES_ON=			python:v11,sutools
+[PY311].BUILDRUN_DEPENDS_ON=		python-cffi:single:v11
+					python-setuptools-rust:single:v11
 
 USES=			cpe cargo ssl cclibs:single
 CPE_VENDOR=		python-cryptography_project
