--- a/bucket_A1/python-bcrypt/specification.template
+++ b/bucket_A1/python-bcrypt/specification.template
@@ -5,8 +5,8 @@ DEF[PORTVERSION]=	%%VERSION%%
 NAMEBASE=		python-bcrypt
 VERSION=		${PORTVERSION}
 KEYWORDS=		python rust
-VARIANTS=		py311 py310
-SDESC[py311]=		Modern password hashing based on blowfish (3.11)
+VARIANTS=		v11 py310
+SDESC[v11]=		Modern password hashing based on blowfish (3.11)
 SDESC[py310]=		Modern password hashing based on blowfish (3.10)
 HOMEPAGE=		https://github.com/pyca/bcrypt/
 CONTACT=		Python_Automaton[python@ironwolf.systems]
@@ -19,12 +19,12 @@ DISTFILE[1]=		bcrypt-${PORTVERSION}.tar.gz:main
 %%CR_DISTFILES%%
 %%DF_INDEX%%
 
-SPKGS[py311]=		single
+SPKGS[v11]=		single
 SPKGS[py310]=		single
 
 OPTIONS_AVAILABLE=	PY311 PY310
 OPTIONS_STANDARD=	none
-VOPTS[py311]=		PY311=ON PY310=OFF
+VOPTS[v11]=		PY311=ON PY310=OFF
 VOPTS[py310]=		PY311=OFF PY310=ON
 
 # License listed at PyPI
@@ -40,8 +40,8 @@ CARGO_SKIP_CONFIGURE=	yes
 CARGO_SKIP_BUILD=	yes
 CARGO_SKIP_INSTALL=	yes
 
-[PY311].USES_ON=			python:py311,sutools
-[PY311].BUILD_DEPENDS_ON=		python-setuptools-rust:single:py311
+[PY311].USES_ON=			python:v11,sutools
+[PY311].BUILD_DEPENDS_ON=		python-setuptools-rust:single:v11
 [PY310].USES_ON=			python:py310,sutools
 [PY310].BUILD_DEPENDS_ON=		python-setuptools-rust:single:py310
 
