autoselect-python: take III

--- a/bucket_81/autoselect-python/files/autoselect.c.in
+++ b/bucket_81/autoselect-python/files/autoselect.c.in
@@ -61,6 +61,15 @@ main(int argc, char **argv)
 	if (strcmp (cmd, "python-config") == 0) {
 		snprintf(recommand, 1024,
 			"%%PREFIX%%/bin/python%s-config", pyver);
+	} else if (strcmp (cmd, "python-config3") == 0) {
+		snprintf(recommand, 1024,
+			"%%PREFIX%%/bin/python%s-config", pyver);
+	} else if (strcmp (cmd, "python3") == 0) {
+		snprintf(recommand, 1024,
+                        "%%PREFIX%%/bin/python%s", pyver);
+	} else if (strcmp (cmd, "2to3") == 0) {
+		snprintf(recommand, 1024,
+			"%%PREFIX%%/bin/2to3-", pyver);
 	} else {
 		snprintf(recommand, 1024,
 			"%%PREFIX%%/bin/%s%s", cmd, pyver);
