untested pass for libiconv callouts

--- a/bucket_3D/cbindgen/specification.template
+++ b/bucket_3D/cbindgen/specification.template
@@ -32,7 +32,7 @@ FPC_EQUIVALENT=		devel/rust-cbindgen
 
 USES=			cargo cclibs:single
 
-B_DEPS[linux]=		libiconv:shared:standard
+C_USES[linux]=		iconv
 
 post-install:
 	${RM} ${STAGEDIR}${PREFIX}/.crates2.json
