--- a/bucket_F0/librsvg/specification.template
+++ b/bucket_F0/librsvg/specification.template
@@ -38,7 +38,7 @@ BUILD_DEPENDS=		python-docutils:single:python_default
 BUILDRUN_DEPENDS=	freetype:primary:standard
 
 USES=			cpe gettext-tools gmake gtk-doc png libtool pkgconfig
-			perl:build python:build cargo execinfo
+			perl:build python:build cargo execinfo zlib:build
 GNOME_COMPONENTS=	cairo pango gdkpixbuf libxml2 libcroco
 CPE_VENDOR=		gnome
 MUST_CONFIGURE=		gnu
