adacurses: follow ncurses update

--- a/bucket_28/adacurses/files/adacurses.gpr.in
+++ b/bucket_28/adacurses/files/adacurses.gpr.in
@@ -17,8 +17,7 @@ library project ADACURSES is
    for Externally_Built use "True";
 
    D_Base_Flags := ("-L%%PREFIX%%/lib", "-Wl,-R,%%PREFIX%%/lib", "-lncurses", "-ltinfo");
-   S_Base_Flags := ("%%PREFIX%%/lib/libncurses.a", "%%PREFIX%%/lib/libtinfo.a",
-                    "%%PREFIX%%/lib/db5/libdb.a");
+   S_Base_Flags := ("%%PREFIX%%/lib/libncurses.a", "%%PREFIX%%/lib/libtinfo.a");
 
    D_Menu_Flags := ();
    S_Menu_Flags := ();
