--- a/bucket_F0/librsvg/specification.template
+++ b/bucket_F0/librsvg/specification.template
@@ -39,7 +39,7 @@ BUILD_DEPENDS=		python-docutils:single:python_default
 BUILDRUN_DEPENDS=	freetype:primary:standard
 
 USES=			cpe gmake gtk-doc png libtool pkgconfig
-			perl:build python:build cargo execinfo
+			perl:build python:build cargo gettext execinfo
 GNOME_COMPONENTS=	cairo pango gdkpixbuf libxml2 libcroco
 CPE_VENDOR=		gnome
 MUST_CONFIGURE=		gnu
