update kf5 metainfo patches to include NetBSD

--- a/bucket_47/kf5-kglobalaccel/patches/patch-metainfo.yaml
+++ b/bucket_47/kf5-kglobalaccel/patches/patch-metainfo.yaml
@@ -1,10 +1,11 @@
 --- metainfo.yaml.orig	2023-01-07 00:27:45 UTC
 +++ metainfo.yaml
-@@ -7,6 +7,7 @@ platforms:
+@@ -7,6 +7,8 @@ platforms:
        note: Supports only platform X11
      - name: FreeBSD
        note: Supports only platform X11
 +    - name: DragonFly
++    - name: NetBSD
      - name: macOS
  portingAid: false
  deprecated: false
