--- a/bucket_45/kf5-kded/patches/patch-metainfo.yaml
+++ b/bucket_45/kf5-kded/patches/patch-metainfo.yaml
@@ -1,10 +1,11 @@
 --- metainfo.yaml.orig	2023-01-07 02:22:43 UTC
 +++ metainfo.yaml
-@@ -5,6 +5,7 @@ type: solution
+@@ -5,6 +5,8 @@ type: solution
  platforms:
      - name: Linux
      - name: FreeBSD
 +    - name: DragonFly
++    - name: NetBSD
  portingAid: false
  deprecated: false
  release: true
