--- a/bucket_75/kf5-kservice/patches/patch-metainfo.yaml
+++ b/bucket_75/kf5-kservice/patches/patch-metainfo.yaml
@@ -1,10 +1,11 @@
 --- metainfo.yaml.orig	2023-01-07 02:25:08 UTC
 +++ metainfo.yaml
-@@ -5,6 +5,7 @@ type: solution
+@@ -5,6 +5,8 @@ type: solution
  platforms:
      - name: Linux
      - name: FreeBSD
 +    - name: DragonFly
++    - name: NetBSD
      - name: Windows
      - name: macOS
      - name: Android
