--- a/bucket_B2/kf5-ki18n/patches/patch-metainfo.yaml
+++ b/bucket_B2/kf5-ki18n/patches/patch-metainfo.yaml
@@ -1,10 +1,11 @@
 --- metainfo.yaml.orig	2023-01-07 02:23:38 UTC
 +++ metainfo.yaml
-@@ -5,6 +5,7 @@ type: functional
+@@ -5,6 +5,8 @@ type: functional
  platforms:
      - name: Linux
      - name: FreeBSD
 +    - name: DragonFly
++    - name: NetBSD
      - name: Windows
      - name: macOS
      - name: Android
