--- a/bucket_E9/kf5-solid/patches/patch-metainfo.yaml
+++ b/bucket_E9/kf5-solid/patches/patch-metainfo.yaml
@@ -1,10 +1,11 @@
 --- metainfo.yaml.orig	2023-01-07 02:26:14 UTC
 +++ metainfo.yaml
-@@ -5,6 +5,7 @@ type: integration
+@@ -5,6 +5,8 @@ type: integration
  platforms:
      - name: Linux
      - name: FreeBSD
 +    - name: DragonFly
++    - name: NetBSD
      - name: Windows
      - name: macOS
      - name: Android
