--- a/bucket_14/libnghttp2/patches/patch-Makefile.am
+++ b/bucket_14/libnghttp2/patches/patch-Makefile.am
@@ -1,16 +1,12 @@
---- Makefile.am.orig	2022-11-13 05:51:12 UTC
+--- Makefile.am.orig	2023-02-13 11:59:29 UTC
 +++ Makefile.am
-@@ -20,8 +20,7 @@
+@@ -20,12 +20,11 @@
  # LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION
  # OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION
  # WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
--SUBDIRS = lib third-party src bpf examples python tests integration-tests \
+-SUBDIRS = lib third-party src bpf examples tests integration-tests \
 -	doc contrib script
 +SUBDIRS = lib
- 
- # Now with python setuptools, make uninstall will leave many files we
- # cannot easily remove (e.g., easy-install.pth).  Disable it for
-@@ -30,7 +29,7 @@ AM_DISTCHECK_CONFIGURE_FLAGS = --disable
  
  ACLOCAL_AMFLAGS = -I m4
  
