librsvg: split out dev and man subpackages

--- a/bucket_F0/librsvg/specification.template
+++ b/bucket_F0/librsvg/specification.template
@@ -19,7 +19,7 @@ DISTFILE[1]=		librsvg-${PORTVERSION}.tar.xz:main
 %%CR_DISTFILES%%
 %%DF_INDEX%%
 
-SPKGS[standard]=	complete primary docs
+SPKGS[standard]=	complete primary dev man docs
 
 OPTIONS_AVAILABLE=	INTROSPECTION
 OPTIONS_STANDARD=	INTROSPECTION
