--- a/bucket_F0/librsvg/specification.template
+++ b/bucket_F0/librsvg/specification.template
@@ -36,11 +36,10 @@ FPC_EQUIVALENT=		graphics/librsvg2-rust
 
 BUILD_DEPENDS=		python-docutils:single:python_default
 			harfbuzz:dev:standard
-BUILDRUN_DEPENDS=	freetype:primary:standard
 
 EXRUN[dev]=		cairo:dev:standard
 
-USES=			cpe gmake gtk-doc png libtool pkgconfig
+USES=			cpe gmake gtk-doc png libtool pkgconfig freetype
 			perl:build python:build cargo gettext execinfo
 GNOME_COMPONENTS=	cairo pango gdkpixbuf libxml2 libcroco
 CPE_VENDOR=		gnome
