autoselect-python: follow previous change

--- a/bucket_81/autoselect-python/files/autoselect.c.in
+++ b/bucket_81/autoselect-python/files/autoselect.c.in
@@ -61,7 +61,7 @@ main(int argc, char **argv)
 	if (strcmp (cmd, "python-config") == 0) {
 		snprintf(recommand, 1024,
 			"%%PREFIX%%/bin/python%s-config", pyver);
-	} else if (strcmp (cmd, "python-config3") == 0) {
+	} else if (strcmp (cmd, "python3-config") == 0) {
 		snprintf(recommand, 1024,
 			"%%PREFIX%%/bin/python%s-config", pyver);
 	} else if (strcmp (cmd, "python3") == 0) {
