--- a/bucket_F0/librsvg/specification.template
+++ b/bucket_F0/librsvg/specification.template
@@ -40,7 +40,7 @@ BUILD_DEPENDS=		python-docutils:single:python_default
 EXRUN[dev]=		cairo:dev:standard
 
 USES=			cpe gmake gtk-doc png libtool pkgconfig freetype
-			perl:build python:build cargo gettext execinfo
+			perl:build python:build cargo execinfo
 GNOME_COMPONENTS=	cairo pango gdkpixbuf libxml2 libcroco
 CPE_VENDOR=		gnome
 MUST_CONFIGURE=		gnu
