ossp-uuid: fix pc file

--- a/bucket_04/ossp-uuid/patches/patch-uuid.pc.in
+++ b/bucket_04/ossp-uuid/patches/patch-uuid.pc.in
@@ -1,15 +1,16 @@
 --- uuid.pc.in.orig	2008-03-07 10:49:59 UTC
 +++ uuid.pc.in
-@@ -29,7 +29,7 @@
+@@ -29,14 +29,14 @@
  
  prefix=@prefix@
  exec_prefix=${prefix}
 -includedir=${prefix}/include
+-libdir=${exec_prefix}/lib
 +includedir=@includedir@
- libdir=${exec_prefix}/lib
++libdir=@libdir@
  
  Name: OSSP uuid
-@@ -37,6 +37,6 @@ Description: Universally Unique Identifi
+ Description: Universally Unique Identifier (UUID) Library
  Version: @UUID_VERSION_RAW@
  URL: http://www.ossp.org/pkg/lib/uuid/
  Cflags: -I${includedir}
