--- a/bucket_AD/ruby30/patches/patch-configure.ac
+++ b/bucket_AD/ruby30/patches/patch-configure.ac
@@ -32,7 +32,34 @@
  		RUBY_APPEND_OPTIONS(CPPFLAGS, -D_XOPEN_SOURCE -D_DARWIN_C_SOURCE -D_DARWIN_UNLIMITED_SELECT -D_REENTRANT)
  		AC_CACHE_CHECK([whether syscall(2) is deprecated], rb_cv_syscall_deprecated,
  		    [RUBY_WERROR_FLAG([
-@@ -3307,7 +3298,7 @@ AS_CASE("$enable_shared", [yes], [
+@@ -1137,6 +1128,8 @@ main()
+ 		],
+ [dragonfly*], [	LIBS="-lm $LIBS"
+ 		],
++[midnight*], [	LIBS="-lm $LIBS"
++		],
+ [aix*],[	LIBS="-lm $LIBS"
+ 		ac_cv_func_round=no
+ 		ac_cv_func___builtin_setjmp=no
+@@ -2821,7 +2814,7 @@ AS_IF([test "$with_dln_a_out" != yes], [
+ 			XLDFLAGS="$XLDFLAGS -Wl,-E"
+ 			LIBPATHFLAG=" -L%1\$-s"
+ 			rb_cv_dlopen=yes],
+-	[freebsd*|dragonfly*], [
++	[freebsd*|dragonfly*|midnight*], [
+ 			: ${LDSHARED='$(CC) -shared'}
+ 			AS_IF([test "$rb_cv_binary_elf" = yes], [
+ 			    LDFLAGS="$LDFLAGS -rdynamic"
+@@ -3293,7 +3286,7 @@ AS_CASE("$enable_shared", [yes], [
+   libdir_basename="${libdir_basename}"${multiarch+'/${arch}'}
+ 
+   AS_CASE(["$target_os"],
+-    [freebsd*|dragonfly*], [],
++    [freebsd*|dragonfly*|midnight*], [],
+     [
+      AS_IF([test "$GCC" = yes], [
+        RUBY_TRY_LDFLAGS([${linker_flag}--no-undefined], [no_undefined=yes], [no_undefined=no])
+@@ -3307,7 +3300,7 @@ AS_CASE("$enable_shared", [yes], [
      [sunos4*], [
  	LIBRUBY_ALIASES='$(LIBRUBY_SONAME) lib$(RUBY_SO_NAME).$(SOEXT)'
  	],
@@ -41,12 +68,12 @@
  	RUBY_APPEND_OPTIONS(LIBRUBY_DLDFLAGS, ['-Wl,-soname,$(LIBRUBY_SONAME)' "$LDFLAGS_OPTDIR"])
  	LIBRUBY_ALIASES='$(LIBRUBY_SONAME) lib$(RUBY_SO_NAME).$(SOEXT)'
  	AS_IF([test "$load_relative" = yes], [
-@@ -3316,13 +3307,9 @@ AS_CASE("$enable_shared", [yes], [
+@@ -3316,13 +3309,9 @@ AS_CASE("$enable_shared", [yes], [
  	    LIBRUBY_RELATIVE=yes
  	])
  	],
 -    [freebsd*|dragonfly*], [
-+    [freebsd*|dragonfly*|netbsd*|linux*|solaris*], [
++    [freebsd*|dragonfly*|netbsd*|linux*|solaris*|midnight*], [
  	LIBRUBY_SO='lib$(RUBY_SO_NAME).$(SOEXT).$(MAJOR)$(MINOR)'
  	LIBRUBY_SONAME='$(LIBRUBY_SO)'
 -	AS_IF([test "$rb_cv_binary_elf" != "yes" ], [
@@ -56,7 +83,7 @@
  	],
      [netbsd*], [
  	LIBRUBY_SONAME='lib$(RUBY_SO_NAME).$(SOEXT).$(MAJOR)$(MINOR)'
-@@ -3355,8 +3342,8 @@ AS_CASE("$enable_shared", [yes], [
+@@ -3355,8 +3344,8 @@ AS_CASE("$enable_shared", [yes], [
  	],
      [darwin*], [
  	LIBRUBY_SO='lib$(RUBY_SO_NAME).$(SOEXT)'
