--- a/bucket_2F/ruby32/patches/patch-configure.ac
+++ b/bucket_2F/ruby32/patches/patch-configure.ac
@@ -1,4 +1,4 @@
---- configure.ac.orig	2022-12-25 06:55:25 UTC
+--- configure.ac.orig	2023-02-08 04:02:20 UTC
 +++ configure.ac
 @@ -130,16 +130,6 @@ dnl checks for alternative programs
  AC_CANONICAL_BUILD
@@ -17,7 +17,35 @@
  
  AC_ARG_PROGRAM
  RUBY_RM_RECURSIVE
-@@ -3109,7 +3099,7 @@ AS_IF([test "$rb_cv_dlopen" = yes], [
+@@ -1227,6 +1217,8 @@ main()
+ 		],
+ [dragonfly*], [	LIBS="-lm $LIBS"
+ 		],
++[midnight*], [	LIBS="-lm $LIBS"
++		],
+ [aix*],[	LIBS="-lm $LIBS"
+ 		ac_cv_func_round=no
+ 		ac_cv_func___builtin_setjmp=no
+@@ -2654,6 +2646,9 @@ AS_CASE([$coroutine_type], [yes|''], [
+         [x86_64-dragonfly*], [
+             coroutine_type=amd64
+         ],
++        [x86_64-midnightbsd*], [
++            coroutine_type=amd64
++        ],
+         [*-haiku*], [
+             coroutine_type=pthread
+         ],
+@@ -3034,7 +3029,7 @@ AC_SUBST(EXTOBJS)
+ 	[interix*], [	: ${LDSHARED='$(CC) -shared'}
+ 			XLDFLAGS="$XLDFLAGS -Wl,-E"
+ 			rb_cv_dlopen=yes],
+-	[freebsd*|dragonfly*], [
++	[freebsd*|dragonfly*|midnight*], [
+ 			: ${LDSHARED='$(CC) -shared'}
+ 			AS_IF([test "$rb_cv_binary_elf" = yes], [
+ 			    LDFLAGS="$LDFLAGS -rdynamic"
+@@ -3109,7 +3104,7 @@ AS_IF([test "$rb_cv_dlopen" = yes], [
  
              AC_MSG_CHECKING([whether $flag is accepted for bundle])
              : > conftest.c
@@ -26,7 +54,16 @@
                  test ! -s conftest.err], [
                  AC_MSG_RESULT([yes])
                  RUBY_APPEND_OPTIONS(DLDFLAGS, [$flag])
-@@ -3488,7 +3478,7 @@ AS_CASE("$enable_shared", [yes], [
+@@ -3474,7 +3469,7 @@ AS_CASE("$enable_shared", [yes], [
+   ])
+ 
+   AS_CASE(["$target_os"],
+-    [freebsd*|dragonfly*], [],
++    [freebsd*|dragonfly*|midnight*], [],
+     [
+      AS_IF([test "$GCC" = yes], [
+        RUBY_TRY_LDFLAGS([${linker_flag}--no-undefined], [no_undefined=yes], [no_undefined=no])
+@@ -3488,7 +3483,7 @@ AS_CASE("$enable_shared", [yes], [
      [sunos4*], [
  	LIBRUBY_ALIASES='$(LIBRUBY_SONAME) lib$(RUBY_SO_NAME).$(SOEXT)'
  	],
@@ -35,12 +72,12 @@
  	RUBY_APPEND_OPTIONS(LIBRUBY_DLDFLAGS, ['-Wl,-soname,$(LIBRUBY_SONAME)' "$LDFLAGS_OPTDIR"])
  	LIBRUBY_ALIASES='$(LIBRUBY_SONAME) lib$(RUBY_SO_NAME).$(SOEXT)'
  	AS_IF([test "$load_relative" = yes], [
-@@ -3497,7 +3487,7 @@ AS_CASE("$enable_shared", [yes], [
+@@ -3497,7 +3492,7 @@ AS_CASE("$enable_shared", [yes], [
  	    LIBRUBY_RELATIVE=yes
  	])
  	],
 -    [freebsd*|dragonfly*], [
-+    [freebsd*|dragonfly*|netbsd*|linux*|solaris*], [
++    [freebsd*|dragonfly*|netbsd*|linux*|solaris*|midnight*], [
  	LIBRUBY_SO='lib$(RUBY_SO_NAME).$(SOEXT).$(MAJOR)$(MINOR)'
  	LIBRUBY_SONAME='$(LIBRUBY_SO)'
  	AS_IF([test "$rb_cv_binary_elf" != "yes" ], [
