krb5: add mbsd support

--- a/bucket_AC/krb5/patches/patch-config_shlib.conf
+++ b/bucket_AC/krb5/patches/patch-config_shlib.conf
@@ -14,7 +14,7 @@
  	;;
  
 -*-*-freebsd*)
-+*-*-freebsd* | *-*-dragonfly* | *-*-netbsd*)
++*-*-freebsd* | *-*-dragonfly* | *-*-netbsd* | *-*-midnight*)
  	case $krb5_cv_host in
  		sparc64-*)
  			PICFLAGS=-fPIC
