--- a/bucket_DC/zeromq/patches/patch-src_platform.hpp.in
+++ b/bucket_DC/zeromq/patches/patch-src_platform.hpp.in
@@ -1,15 +1,18 @@
 --- src/platform.hpp.in.orig	2021-01-17 13:18:46 UTC
 +++ src/platform.hpp.in
-@@ -240,9 +240,12 @@
+@@ -240,9 +240,15 @@
  /* Whether EFD_CLOEXEC is defined and functioning. */
  #undef ZMQ_HAVE_EVENTFD_CLOEXEC
  
 -/* Have DragonFly OS */
-+/* Have FreeBSD or DragonFly OS */
++/* Have FreeBSD or DragonFly or MidnightBSD OS */
  #undef ZMQ_HAVE_FREEBSD
  
 +/* Have DragonFly OS */
 +#undef ZMQ_HAVE_DRAGONFLY
++
++/* Have MidnightBSD OS */
++#undef ZMQ_HAVE_MIDNIGHTBSD
 +
  /* Whether getrandom is supported. */
  #undef ZMQ_HAVE_GETRANDOM
