kf5-kwindowsystem: support mbsd

--- a/bucket_63/kf5-kwindowsystem/patches/patch-metainfo.yaml
+++ b/bucket_63/kf5-kwindowsystem/patches/patch-metainfo.yaml
@@ -1,11 +1,12 @@
 --- metainfo.yaml.orig	2023-01-07 00:33:39 UTC
 +++ metainfo.yaml
-@@ -7,6 +7,8 @@ platforms:
+@@ -7,6 +7,9 @@ platforms:
        note: Only platform X11 is supported
      - name: FreeBSD
        note: Only platform X11 is supported
 +    - name: DragonFly
 +    - name: NetBSD
++    - name: MidnightBSD
      - name: macOS
        note: Not all features supported
      - name: Windows
