--- a/bucket_0B/kf5-kwidgetsaddons/patches/patch-metainfo.yaml
+++ b/bucket_0B/kf5-kwidgetsaddons/patches/patch-metainfo.yaml
@@ -1,11 +1,12 @@
 --- metainfo.yaml.orig	2023-01-11 22:49:16 UTC
 +++ metainfo.yaml
-@@ -5,6 +5,8 @@ type: functional
+@@ -5,6 +5,9 @@ type: functional
  platforms:
      - name: Linux
      - name: FreeBSD
 +    - name: DragonFly
 +    - name: NetBSD
++    - name: MidnightBSD
      - name: Windows
      - name: macOS
      - name: Android
