--- a/bucket_93/kf5-kauth/patches/patch-metainfo.yaml
+++ b/bucket_93/kf5-kauth/patches/patch-metainfo.yaml
@@ -1,11 +1,12 @@
 --- metainfo.yaml.orig	2023-01-07 00:23:52 UTC
 +++ metainfo.yaml
-@@ -6,6 +6,8 @@ platforms:
+@@ -6,6 +6,9 @@ platforms:
      - name: macOS
      - name: Linux
      - name: FreeBSD
 +    - name: DragonFly
 +    - name: NetBSD
++    - name: MidnightBSD
  portingAid: false
  deprecated: false
  release: true
