--- a/bucket_D2/kf5-kcrash/patches/patch-metainfo.yaml
+++ b/bucket_D2/kf5-kcrash/patches/patch-metainfo.yaml
@@ -1,10 +1,11 @@
 --- metainfo.yaml.orig	2023-01-07 00:25:32 UTC
 +++ metainfo.yaml
-@@ -5,6 +5,7 @@ type: integration
+@@ -5,6 +5,8 @@ type: integration
  platforms:
      - name: Linux
      - name: FreeBSD
 +    - name: DragonFly
++    - name: MidnightBSD
      - name: macOS
      - name: Windows
  portingAid: false
