--- a/bucket_90/php81/patches/patch-configure.ac
+++ b/bucket_90/php81/patches/patch-configure.ac
@@ -1,4 +1,4 @@
---- configure.ac.orig	2023-03-14 19:50:20 UTC
+--- configure.ac.orig	2023-04-11 16:47:45 UTC
 +++ configure.ac
 @@ -55,6 +55,7 @@ AH_BOTTOM([
  
@@ -8,7 +8,7 @@
  #endif /* PHP_CONFIG_H */
  ])
  
-@@ -614,7 +615,7 @@ memmem \
+@@ -615,7 +616,7 @@ strerror_r \
  AX_FUNC_WHICH_GETHOSTBYNAME_R
  
  dnl Some systems (like OpenSolaris) do not have nanosleep in libc.
@@ -17,7 +17,7 @@
  
  dnl Haiku does not have network api in libc.
  PHP_CHECK_FUNC_LIB(setsockopt, network)
-@@ -1372,7 +1373,7 @@ EXPANDED_SYSCONFDIR=`eval echo $sysconfd
+@@ -1373,7 +1374,7 @@ EXPANDED_SYSCONFDIR=`eval echo $sysconfd
  EXPANDED_DATADIR=$datadir
  EXPANDED_PHP_CONFIG_FILE_PATH=`eval echo "$PHP_CONFIG_FILE_PATH"`
  EXPANDED_PHP_CONFIG_FILE_SCAN_DIR=`eval echo "$PHP_CONFIG_FILE_SCAN_DIR"`
@@ -26,7 +26,7 @@
  
  exec_prefix=$old_exec_prefix
  libdir=$old_libdir
-@@ -1591,7 +1592,7 @@ PHP_SUBST(all_targets)
+@@ -1592,7 +1593,7 @@ PHP_SUBST(all_targets)
  PHP_SUBST(install_targets)
  PHP_SUBST(install_binary_targets)
  
