tumbler: upgrade, split out dev

--- a/bucket_FC/tumbler/patches/patch-tumblerd__tumbler.rc
+++ b/bucket_FC/tumbler/patches/patch-tumblerd__tumbler.rc
@@ -1,6 +1,6 @@
---- tumblerd/tumbler.rc.orig	2022-12-16 23:16:55.635362000 +0100
-+++ tumblerd/tumbler.rc	2022-12-16 23:18:13.425194000 +0100
-@@ -36,7 +36,7 @@
+--- tumblerd/tumbler.rc.orig	2022-12-05 11:10:53 UTC
++++ tumblerd/tumbler.rc
+@@ -36,7 +36,7 @@ MaxFileSize=0
  # RAW image files using libopenraw (the libopenraw pixbuf loader is kind of
  # broken, hence the priority)
  [RawThumbnailer]
@@ -9,7 +9,7 @@
  Priority=3
  Locations=
  Excludes=
-@@ -67,7 +67,7 @@
+@@ -67,7 +67,7 @@ MaxFileSize=0
  
  # ffmpegthumbnailer plugin
  [FfmpegThumbnailer]
