--- a/bucket_08/libxml2/patches/patch-python_Makefile.in
+++ b/bucket_08/libxml2/patches/patch-python_Makefile.in
@@ -1,11 +1,11 @@
---- python/Makefile.in.orig	2023-04-11 11:28:11 UTC
+--- python/Makefile.in.orig	2023-04-30 12:05:10 UTC
 +++ python/Makefile.in
-@@ -489,7 +489,7 @@ target_alias = @target_alias@
+@@ -468,7 +468,7 @@ target_alias = @target_alias@
  top_build_prefix = @top_build_prefix@
  top_builddir = @top_builddir@
  top_srcdir = @top_srcdir@
 -SUBDIRS = . tests
 +SUBDIRS = .
- docsdir = $(docdir)/python
- dist_docs_DATA = TODO
  EXTRA_DIST = \
+ 	generator.py		\
+ 	libxml.py		\
