maturin needs gcc libs

--- a/bucket_7C/python-maturin/specification.template
+++ b/bucket_7C/python-maturin/specification.template
@@ -45,7 +45,7 @@ DISTNAME=		maturin-${PORTVERSION}
 
 BUILD_DEPENDS=		rust:single:standard
 
-USES=			cargo
+USES=			cargo cclibs:single
 CARGO_CARGOTOML=	{{WRKSRC}}/Cargo.toml
 CARGO_CARGOLOCK=	{{WRKSRC}}/Cargo.lock
 CARGO_SKIP_CONFIGURE=	yes
