--- a/bucket_F8/gawk/patches/patch-Makefile.in
+++ b/bucket_F8/gawk/patches/patch-Makefile.in
@@ -1,9 +1,9 @@
---- Makefile.in.orig	2022-11-17 16:16:50 UTC
+--- Makefile.in.orig	2023-05-07 18:29:33 UTC
 +++ Makefile.in
-@@ -1304,7 +1304,7 @@ install-exec-hook:
- 	(cd $(DESTDIR)$(bindir); \
- 	name=`echo gawk | sed '$(transform)'` ; \
- 	$(LN) $${name}$(EXEEXT) gawk-$(VERSION)$(EXEEXT) 2>/dev/null ; \
+@@ -1306,7 +1306,7 @@ install-exec-hook:
+ 	if [ ! -f gawk-$(VERSION)$(EXEEXT) ]; \
+ 	then	$(LN) $${name}$(EXEEXT) gawk-$(VERSION)$(EXEEXT) 2>/dev/null ; \
+ 	fi; \
 -	if [ ! -f awk$(EXEEXT) ]; \
 +	if ! /usr/bin/which awk; \
  	then	$(LN_S) $${name}$(EXEEXT) awk$(EXEEXT); \
