opensmtpd: upgrade and split

--- a/bucket_79/opensmtpd/patches/patch-mk_smtpd_Makefile.in
+++ b/bucket_79/opensmtpd/patches/patch-mk_smtpd_Makefile.in
@@ -1,8 +1,8 @@
---- mk/smtpd/Makefile.in.orig	2020-12-24 13:43:12 UTC
+--- mk/smtpd/Makefile.in.orig	2023-06-15 08:39:48 UTC
 +++ mk/smtpd/Makefile.in
-@@ -1495,13 +1495,7 @@ install-exec-hook: $(CONFIGFILES) $(MANP
- 	$(MKDIR_P) $(DESTDIR)$(bindir)
+@@ -1469,13 +1469,7 @@ install-exec-hook: $(CONFIGFILES) $(MANP
  	$(MKDIR_P) $(DESTDIR)$(mandir)/$(mansubdir)5
+ 	$(MKDIR_P) $(DESTDIR)$(mandir)/$(mansubdir)7
  	$(MKDIR_P) $(DESTDIR)$(mandir)/$(mansubdir)8
 -
 -	@if [ ! -f $(DESTDIR)$(sysconfdir)/smtpd.conf ]; then			\
