--- a/bucket_3D/cbindgen/specification.template
+++ b/bucket_3D/cbindgen/specification.template
@@ -31,6 +31,7 @@ LICENSE_SCHEME=		solo
 FPC_EQUIVALENT=		devel/rust-cbindgen
 
 USES=			cargo cclibs:single
+INSTALL_REQ_TOOLCHAIN=	yes
 
 C_USES[linux]=		iconv
 
