--- a/bucket_80/comtrya/specification.template
+++ b/bucket_80/comtrya/specification.template
@@ -28,6 +28,7 @@ OPTIONS_STANDARD=	none
 # LICENSE_SCHEME=		solo
 
 USES=			cargo cclibs:single zlib ssl:openssl11 gmake perl:build
+INSTALL_REQ_TOOLCHAIN=	yes
 
 post-install:
 	${RM} ${STAGEDIR}${PREFIX}/.crates2.json
