python-cryptography: upgrade

--- a/bucket_7E/python-cryptography/specification.template
+++ b/bucket_7E/python-cryptography/specification.template
@@ -1,4 +1,5 @@
 # manually updated rust-based port
+# Since v0.1.0, we need to skip four: cryptography-(rust|cffi|openssl|x509)
 DEF[PORTVERSION]=	%%VERSION%%
 DEF[SKIP_CRATE]=	cryptography-rust
 # ------------------------------------------------------------------------
