groff: upgrade and split out man pages

--- a/bucket_90/groff/patches/patch-src_libs_libgroff_libgroff.am
+++ b/bucket_90/groff/patches/patch-src_libs_libgroff_libgroff.am
@@ -1,8 +1,8 @@
---- src/libs/libgroff/libgroff.am.orig	2018-10-10 21:44:56 UTC
+--- src/libs/libgroff/libgroff.am.orig	2023-07-02 16:09:34 UTC
 +++ src/libs/libgroff/libgroff.am
-@@ -134,7 +134,7 @@ ref-del.sed : $(libgroff_srcdir)/ref-del
- 	    -e 's/@''PACKAGE''@/$(LIBGROFF_PACKAGE)/g' $(libgroff_srcdir)/ref-del.sin > t-$@
- 	mv t-$@ $@
+@@ -140,7 +140,7 @@ ref-del.sed: $(libgroff_srcdir)/ref-del.
+ 	    $(libgroff_srcdir)/ref-del.sin > t-$@ \
+ 	  && mv t-$@ $@
  
 -install-data-local: install_charset_data
 +install-data-local:
