--- a/bucket_97/recoll/patches/patch-Makefile.in
+++ b/bucket_97/recoll/patches/patch-Makefile.in
@@ -1,6 +1,6 @@
---- Makefile.in.orig	2023-02-15 09:57:50 UTC
+--- Makefile.in.orig	2023-06-27 12:34:25 UTC
 +++ Makefile.in
-@@ -2834,16 +2834,12 @@ PicStatic: $(librecoll_la_OBJECTS)
+@@ -2941,16 +2941,12 @@ CXXFLAGS ?= @CXXFLAGS@
  @MAKEPYTHON_TRUE@clean-local:: recollpython-clean
  @MAKEPYTHON_TRUE@recollpython: librecoll.la
  @MAKEPYTHON_TRUE@	(cd python/recoll; set -x; \
@@ -19,7 +19,7 @@
  @MAKEPYTHON_TRUE@         )
  @MAKEPYTHON_TRUE@recollpython-clean:
  @MAKEPYTHON_TRUE@	rm -f python/recoll/*.pyc
-@@ -2859,16 +2855,12 @@ PicStatic: $(librecoll_la_OBJECTS)
+@@ -2966,16 +2962,12 @@ CXXFLAGS ?= @CXXFLAGS@
  @MAKEPYTHONCHM_TRUE@clean-local:: rclpychm-clean
  @MAKEPYTHONCHM_TRUE@rclpychm:
  @MAKEPYTHONCHM_TRUE@	(cd python/pychm; set -x; \
