--- a/bucket_12/stunnel/patches/patch-configure.ac
+++ b/bucket_12/stunnel/patches/patch-configure.ac
@@ -1,7 +1,7 @@
---- configure.ac.orig	2023-02-07 19:01:09 UTC
+--- configure.ac.orig	2023-04-24 10:16:19 UTC
 +++ configure.ac
-@@ -98,13 +98,6 @@ if test "$GCC" = yes; then
-     AX_APPEND_COMPILE_FLAGS([-Wno-long-long])
+@@ -97,13 +97,6 @@ if test "$GCC" = yes; then
+     AX_APPEND_COMPILE_FLAGS([-Wconversion])
      AX_APPEND_COMPILE_FLAGS([-Wno-deprecated-declarations])
      AX_APPEND_COMPILE_FLAGS([-fPIE])
 -    case "${host}" in
