emacs: upgrade and split

--- a/bucket_4B/emacs/patches/patch-lib-src_Makefile.in
+++ b/bucket_4B/emacs/patches/patch-lib-src_Makefile.in
@@ -1,6 +1,6 @@
---- lib-src/Makefile.in.orig	2022-09-06 21:31:53 UTC
+--- lib-src/Makefile.in.orig	2023-01-01 13:46:42 UTC
 +++ lib-src/Makefile.in
-@@ -134,7 +134,7 @@ MKDIR_P = @MKDIR_P@
+@@ -144,7 +144,7 @@ HAIKU_CFLAGS=@HAIKU_CFLAGS@
  CLIENTW = @CLIENTW@
  
  # Things that a user might actually run, which should be installed in bindir.
