qt6 builds without clang on FreeBSD when PCH is disabled

--- a/bucket_49/qt6-qtbase/files/qmake.conf.in
+++ b/bucket_49/qt6-qtbase/files/qmake.conf.in
@@ -11,10 +11,10 @@ include(../common/gcc-base-unix.conf)
 include(../common/g++-unix.conf)
 include(../common/unix.conf)
 
-QMAKE_COMPILER		= %%CC%%
+QMAKE_COMPILER		= cc
 
-QMAKE_CC		= %%CC%%
-QMAKE_CXX		= %%CXX%%
+QMAKE_CC		= cc
+QMAKE_CXX		= c++
 QMAKE_CFLAGS		= %%CFLAGS%%
 QMAKE_CXXFLAGS		= %%CXXFLAGS%%
 QMAKE_LEX		= /usr/bin/flex
