--- a/bucket_B0/python-orjson/specification.template
+++ b/bucket_B0/python-orjson/specification.template
@@ -75,10 +75,13 @@ pre-install-midnightbsd:
 	orjson-${PORTVERSION}-cp${PYTHON_SUFFIX}-cp${PYTHON_SUFFIX}-midnightbsd_3_0_0_amd64.whl)
 
 pre-install-linux:
-	# for some reason compatibility ends at -manylinux_2_23_x86_64
-	(cd ${INSTALL_WRKSRC}/target/wheels/ && ${MV}\
-	orjson-${PORTVERSION}-cp${PYTHON_SUFFIX}-cp${PYTHON_SUFFIX}-manylinux_2_24_x86_64.whl\
-	orjson-${PORTVERSION}-cp${PYTHON_SUFFIX}-cp${PYTHON_SUFFIX}-manylinux_2_23_x86_64.whl)
+	# for some reason compatibility ends at -manylinux_2_23_x86_64 on
+	# ubuntu 16.04 sysroot
+	if [ -f "${INSTALL_WRKSRC}/target/wheels/orjson-${PORTVERSION}-cp${PYTHON_SUFFIX}-cp${PYTHON_SUFFIX}-manylinux_2_24_x86_64.whl" ];\
+	then ${MV}\
+	  ${INSTALL_WRKSRC}/target/wheels/orjson-${PORTVERSION}-cp${PYTHON_SUFFIX}-cp${PYTHON_SUFFIX}-manylinux_2_24_x86_64.whl\
+	  ${INSTALL_WRKSRC}/target/wheels/orjson-${PORTVERSION}-cp${PYTHON_SUFFIX}-cp${PYTHON_SUFFIX}-manylinux_2_23_x86_64.whl;\
+	fi
 
 do-install:
 	# Due to upstream not supplying a setup.py file or other way to install
