--- a/bucket_D3/python-rpds-py/specification.template
+++ b/bucket_D3/python-rpds-py/specification.template
@@ -101,7 +101,10 @@ pre-install-midnightbsd:
 	rpds_py-${PORTVERSION}-cp${PYTHON_SUFFIX}-cp${PYTHON_SUFFIX}-midnightbsd_3_0_0_amd64.whl)
 
 pre-install-linux:
-	# for some reason compatibility ends at -manylinux_2_23_x86_64
-	(cd ${INSTALL_WRKSRC}/target/wheels/ && ${MV}\
-	rpds_py-${PORTVERSION}-cp${PYTHON_SUFFIX}-cp${PYTHON_SUFFIX}-manylinux_2_24_x86_64.whl\
-	rpds_py-${PORTVERSION}-cp${PYTHON_SUFFIX}-cp${PYTHON_SUFFIX}-manylinux_2_23_x86_64.whl)
+	# for some reason compatibility ends at -manylinux_2_23_x86_64 on
+	# ubuntu 16.04 sysroot
+	if [ -f "${INSTALL_WRKSRC}/target/wheels/rpds_py-${PORTVERSION}-cp${PYTHON_SUFFIX}-cp${PYTHON_SUFFIX}-manylinux_2_24_x86_64.whl" ];\
+	then ${MV}\
+	  ${INSTALL_WRKSRC}/target/wheels/rpds_py-${PORTVERSION}-cp${PYTHON_SUFFIX}-cp${PYTHON_SUFFIX}-manylinux_2_24_x86_64.whl\
+	  ${INSTALL_WRKSRC}/target/wheels/rpds_py-${PORTVERSION}-cp${PYTHON_SUFFIX}-cp${PYTHON_SUFFIX}-manylinux_2_23_x86_64.whl;\
+	fi
