--- a/bucket_43/ipmitool/patches/patch-configure.ac
+++ b/bucket_43/ipmitool/patches/patch-configure.ac
@@ -8,3 +8,12 @@
  	else
  		DOWNLOAD="$CURL --location --progress-bar"
  		AM_CONDITIONAL([DOWNLOAD], [true])
+@@ -118,7 +119,7 @@ solaris*)
+ 	xenable_intf_lipmi=no
+ 	xenable_ipmishell=no
+ 	;;
+-*freebsd*)
++*freebsd*|*dragonfly*)
+ 	xenable_intf_imb=no
+ 	xenable_intf_lipmi=no
+ 	CFLAGS="$CFLAGS -D__BSD_VISIBLE"
