new gnatstudio, wip

--- a/bucket_34/gnatstudio/patches/patch-docs_Makefile.in
+++ b/bucket_34/gnatstudio/patches/patch-docs_Makefile.in
@@ -1,4 +1,4 @@
---- docs/Makefile.in.orig	2022-05-11 12:25:42 UTC
+--- docs/Makefile.in.orig	2023-05-10 09:41:12 UTC
 +++ docs/Makefile.in
 @@ -1,10 +1,9 @@
  prefix = @prefix@
@@ -31,7 +31,7 @@
  
  .PHONY: tutorial
  tutorial:
--	make -C tutorial html
+-	make -C tutorial html latexpdf
 +	$(MAKE) -C tutorial html
  
  install:
