gtkada: snapshot upgrade to support latest gnatstudio

--- a/bucket_C5/gtkada/patches/patch-gtkada__shared.gpr.in
+++ b/bucket_C5/gtkada/patches/patch-gtkada__shared.gpr.in
@@ -1,6 +1,6 @@
---- shared.gpr.in.orig	2022-09-29 10:11:58 UTC
-+++ shared.gpr.in
-@@ -63,11 +63,11 @@ project Shared is
+--- gtkada_shared.gpr.in.orig	2023-06-06 13:43:43 UTC
++++ gtkada_shared.gpr.in
+@@ -63,11 +63,11 @@ project GtkAda_Shared is
           when "Debug" =>
               for Switches ("Ada") use
                  ("-gnatQ", "-gnatwae", "-gnatay", "-g", "-O0");
