--- a/bucket_12/stunnel/patches/patch-configure.ac
+++ b/bucket_12/stunnel/patches/patch-configure.ac
@@ -1,6 +1,6 @@
---- configure.ac.orig	2023-04-24 10:16:19 UTC
+--- configure.ac.orig	2023-09-19 20:09:36 UTC
 +++ configure.ac
-@@ -97,13 +97,6 @@ if test "$GCC" = yes; then
+@@ -97,13 +97,6 @@ if test "${GCC}" = yes; then
      AX_APPEND_COMPILE_FLAGS([-Wconversion])
      AX_APPEND_COMPILE_FLAGS([-Wno-deprecated-declarations])
      AX_APPEND_COMPILE_FLAGS([-fPIE])
