--- a/bucket_1C/florist/patches/patch-Makefile.in
+++ b/bucket_1C/florist/patches/patch-Makefile.in
@@ -1,19 +1,16 @@
---- Makefile.in.orig	2016-05-16 09:26:01 UTC
+--- Makefile.in.orig	2017-05-16 10:40:58 UTC
 +++ Makefile.in
-@@ -171,7 +171,14 @@ distclean: clean
+@@ -171,7 +171,11 @@ distclean: clean
  # install floristlib
  # make all files read-only to prevent recompilation
  install:
 -	gprinstall -Pflorist $(PROJECT_FLAGS) -a -p -f --prefix=$(PREFIX) --sources-subdir=floristlib --lib-subdir=floristlib --link-lib-subdir=floristlib
 -	chmod a-w $(PREFIX)/floristlib/*
-+	mkdir -p $(DESTDIR)$(PREFIX)/share/gpr \
-+		 $(DESTDIR)$(PREFIX)/lib/florist \
-+		 $(DESTDIR)$(PREFIX)/include/florist
-+	$(BSD_INSTALL_DATA) gensrc/*.ad[bs] gensrc/threads/*.ad[bs] \
-+		libsrc/*.ad[bs] libsrc/threads/*.ad[bs] \
-+		$(DESTDIR)$(PREFIX)/include/florist
-+	$(BSD_INSTALL_DATA) lib/*.ali $(DESTDIR)$(PREFIX)/lib/florist
-+	$(BSD_INSTALL_DATA) lib/*.a $(DESTDIR)$(PREFIX)/lib/florist
-+	$(BSD_INSTALL_DATA) ../florist.gpr $(DESTDIR)$(PREFIX)/share/gpr
++	gprinstall -p -Pflorist $(PROJECT_FLAGS) -a -f \
++		--no-manifests \
++		--prefix=$(DESTDIR)$(PREFIX) \
++		--sources-subdir=include/florist \
++		--lib-subdir=lib/florist \
++
  
  .PHONY: all install clean distclean regen floristlib force
